utilização biblioteca htmltoimage

--- a/public/assets/lbk/screens/notification/corner-top-right.html
+++ b/public/assets/lbk/screens/notification/corner-top-right.html
@@ -12,7 +12,19 @@
 		<link rel="stylesheet" type="text/css" href="css/ns-default.css" />
         <link rel="stylesheet" type="text/css" href="css/ns-style-other.css" />
         <link rel="stylesheet" type="text/css" href="css/custom.css" />
-        <link rel="stylesheet" type="text/css" href="../../media/fontawesome-5.13.0/css/all.min.css">
+
+
+		<style>
+			/* @import url('css/normalize.css');
+			@import url('css/demo.css');
+			@import url('css/ns-default.css');
+			@import url('css/ns-style-other.css');
+			@import url('css/custom.css');		 */
+		</style>
+		
+		<link rel="stylesheet" type="text/css" href="../../media/fontawesome-5.13.0/css/all.min.css">
+
+
 
 		<script src="js/modernizr.custom.js"></script>
 		<script src="js/snap.svg-min.js"></script>
