--- a/public/assets/lbk/index.html
+++ b/public/assets/lbk/index.html
@@ -178,20 +178,9 @@
                         </div>
 
                         <div class="form-group col-md-6">
-                            <a class="btn btn-block btn-primary" onclick="window.parent.download_frame()"><i class="fa fa-plus-square"></i> Download Frame</a>
+                            <a class="btn btn-block btn-primary" onclick="window.parent.download_frame()"><i class="fa fa-arrow-down"></i> Download Frame</a>
                         </div>
 
-
-                        <div class="form-group col-md-6">
-                            <a class="btn btn-block btn-primary" onclick="window.parent.generate_gif()"><i class="fa fa-plus-square"></i> Generate Imgs Gif</a>
-                        </div>
-                        <div class="form-group col-md-6">
-                            <a class="btn btn-block btn-primary" onclick="window.parent.download_gif()"><i class="fa fa-plus-square"></i> Download Gif</a>
-                        </div>
-
-                        <div class="form-group col-md-6">
-                            <a class="btn btn-block btn-primary" id="btnRecord" style="display: none;"><i class="fa fa-plus-square"></i> Record</a>
-                        </div>
                     </div>
                 </div>
 
