Add poster na tela inicial/ Fix rota que volta do poster

--- a/public/assets/lbk/index.html
+++ b/public/assets/lbk/index.html
@@ -28,7 +28,7 @@
             <div class="row brand align-middle">
                 <div class="col">
                     <h2>
-                        <a href="/">
+                        <a onclick="window.parent.location.href='/'">
                             <span class="badge badge-pill badge-light"><i class="fa fa-arrow-left"></i> <img  class="h-full" width="100px" src="../../img/logo-practice.png" alt=""></span>
                         </a>
                     </h2>
