--- a/public/assets/lbk/screens/blank/index.html
+++ b/public/assets/lbk/screens/blank/index.html
@@ -9,12 +9,41 @@
         body {
             margin: 0;
             padding: 0;
-            background: #ff00ff;
+            background: #fff;
+            line-height: 0.5em
+        }
+
+        .notice {
+            position: absolute;
+            top: 45%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            text-align: center;
+        }
+
+        .huge {
+            font-size: 6em;
+        }
+
+        .small {
+            font-size: 1.2em;
+        }
+
+        p {
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            font-size: 2.0em;
+            font-weight: 200;
+            color: rgb(150, 150, 150);
         }
      </style>
 </head>
 
 <body>
+    <div class="notice">
+        <p class="huge">🚀</p>
+        <p>O que vamos fazer hoje? </p>
+        <p class="small">Utilize o painel à esquerda para começar</p>
+    </div>
 </body>
 
 </html>
