feat: geração de conteúdo baseada em fontes externas

--- a/public/assets/lbk/screens/live-cover/index.html
+++ b/public/assets/lbk/screens/live-cover/index.html
@@ -106,6 +106,9 @@
                     <h1 id="title">Fernando Bevilacqua</h1>
                     <small>Test test</small>
                     <small>- Test test</small>
+                    <img src="" class="hint photo">
+                    <img src="" class="hint icon">
+                    <img src="" class="hint illustration">
                 </div>
                 <div class="end"></div>
             </div>
