feat: url pública para renderização de conteúdo

--- a/public/assets/lbk/screens/live-cover/index.html
+++ b/public/assets/lbk/screens/live-cover/index.html
@@ -2,9 +2,12 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js">
 <head>
+    <base id="baseUrl" href="" />
+
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    
     <title>Live cover</title>
     
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
@@ -115,14 +118,14 @@
         </div>
     </div>
 
-    <script src="../../js/jquery-3.5.1.min.js"></script>
+    <script src="../js/jquery-3.5.1.min.js"></script>
     <script>
         $(function () {
             document.body.style.display = 'block';
 
             var parentWindow = window.opener || window.parent;
 
-            if (!parentWindow.LBK) {
+            if (!parentWindow || !parentWindow.LBK) {
                 return;
             }
 
