--- a/public/book/assets/theme-light.html
+++ b/public/book/assets/theme-light.html
@@ -2,25 +2,26 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.13.1/build/styles/github-gist.min.css">
   <style>
     body {
-      font-family: calibri;
+      font-family: roboto;
       font-size: 14px;
-      line-height: 1.4;
+      line-height: 2;
+      background-color: #eaefeb;
       color: #252525;
     }
 
     h1, h2 {
-      font-family: times;
+      font-family: roboto;
     }
 
     h3 {
-      font-family: calibri;
+      font-family: roboto;
       font-weight: bold;
     }
 
     h1 {
-      font-size: 35px;
+      font-size: 30px;
       padding-top: 0;
-      padding-bottom: 70px;
+      padding-bottom: 30px;
     }
 
     h2 {
@@ -68,7 +69,7 @@
     }
 
     .mpdf_toc {
-      font-family: calibri;
+      font-family: roboto;
       color: #252525;
     }
 
@@ -87,21 +88,21 @@
 
     span.mpdf_toc_t_level_0, span.mpdf_toc_p_level_0 {
       color: #252525;
-      font-family: calibri;
+      font-family: roboto;
       font-weight: bold;
       font-style: normal;
     }
 
     span.mpdf_toc_t_level_1, span.mpdf_toc_p_level_1 {
       color: #252525;
-      font-family: calibri;
+      font-family: roboto;
       font-weight: normal;
       font-style: normal;
     }
 
     span.mpdf_toc_t_level_2, span.mpdf_toc_p_level_2 {
       color: #252525;
-      font-family: calibri;
+      font-family: roboto;
       font-weight: normal;
       font-style: normal;
     }
