Fix: Justifica texto e marca paragrafo

--- a/public/book/assets/theme-light.html
+++ b/public/book/assets/theme-light.html
@@ -38,6 +38,11 @@
       padding-bottom: 0;
     }
 
+    p {
+      text-indent: 20px;
+      text-align: justify;  
+    }
+
     p, ul, ol {
       margin-bottom: 20px;
     }
