--- a/public/book/assets/theme-dark.html
+++ b/public/book/assets/theme-dark.html
@@ -40,6 +40,11 @@
       padding-bottom: 0;
     }
 
+    p {
+      text-indent: 20px;
+      text-align: justify;  
+    }
+
     p, ul, ol {
       margin-bottom: 20px;
     }
